--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
-    "react-toastify": "^9.0.8"
+    "react-hot-toast": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
