--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
+    "reactjs-popup": "^2.0.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
