--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.0.1",
     "bootstrap-icons": "^1.9.1",
     "bootswatch": "^5.2.0",
+    "core-js": "^2.6.12",
     "firebase": "^9.9.3",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -18,6 +20,7 @@
     "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
+    "react-pdf-table": "^1.0.0-alfa.3",
     "reactjs-popup": "^2.0.5",
     "uuid": "^8.3.2"
   },
